--- a/client/src/components/Sidebar/Sidebar.module.css
+++ b/client/src/components/Sidebar/Sidebar.module.css
@@ -7,7 +7,13 @@
   color: white;
   display: flex;
   flex-direction: column;
-  border-right: 2px solid #34495e;
+  border-right: none;
+}
+
+@media (min-width: 768px) {
+  .sidebar {
+    border-right: 1px solid #34495e;
+  }
 }
 
 @media (min-width: 768px) {
